[#51] - fix the box that wraps the checkboxes on mobile and move save button to right

--- a/frontend/src/app.scss
+++ b/frontend/src/app.scss
@@ -95,7 +95,7 @@
   }
 
   .content-container {
-    padding: 30px 70px;
+    padding: 30px;
 
     .content {
       background: #fff;
@@ -106,6 +106,10 @@
       p {
         font-size: 1.2em;
       }
+    }
+
+    @media (min-width: 786px) {
+      padding: 30px 70px;
     }
   }
 }
