--- a/frontend/src/pages/profile/profile.scss
+++ b/frontend/src/pages/profile/profile.scss
@@ -9,6 +9,7 @@
 
       .ant-checkbox-group {
         min-width: 100%;
+        width: 100%;
         max-height: 300px;
         overflow-y: scroll;
         background: #f7f8fc;
